--- a/template.html
+++ b/template.html
@@ -6,7 +6,8 @@
 
 
     <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 </head>
 <body>
@@ -15,6 +16,7 @@
 <!-- partial -->
 <script src='https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/5.12.0/d3.min.js'></script>
+
 <script src="script.js"></script>
 </body>
 </html>
